--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -1,3 +1,12 @@
+:root {
+  --color-edf7f6
+  : #edf7f6;
+  --color-222e50: #222e50;
+  --color-3b4149: #3b4149;
+  --color-fccb06: #fccb06;
+  --color-fff: #fff;
+  --color-8bc34a: #8bc34a;
+}
 * {
   margin: 0;
   padding: 0;
@@ -8,28 +17,17 @@ li {
   list-style: none;
 }
 
-Link {
+a{
   text-decoration: none;
+  color: var(--color-222e50);
 }
 
-:root {
-  --color-edf7f6: #edf7f6;
-  --color-222e50: #222e50;
-  --color-3b4149: #3b4149;
-  --color-fccb06: #fccb06;
-  --color-fff: #fff;
-  --color-8bc34a: #8bc34a;
-}
 
 body {
   font-family: "Rubik", sans-serif;
-  background: #edf7f6;
+  background: var(--color-edf7f6);
 }
 
-a {
-  text-decoration: none;
-  display: inline-block;
-}
 
 /* header start */
 .heafer-top-strip {
@@ -38,7 +36,7 @@ a {
 }
 
 .header-upper {
-  background: var(--color-222e50);
+  background: var(--color-fff);
   position: fixed;
   z-index: 1;
   top: 0 !important;
@@ -126,7 +124,7 @@ h2 {
 }
 
 .product {
-  margin-top: 80px;
+  margin-top: 100px;
 }
 
 @media (max-width: 768px) {
@@ -204,12 +202,12 @@ h2 {
   vertical-align: middle;
 }
 
-.Offer-btn {
+.Offer-btn, .delete-btn{
   background-color: var(--color-222e50);
   color: var(--color-fff);
 }
 
-.Offer-btn:hover {
+.Offer-btn:hover, .delete-btn:hover {
   background-color: var(--color-222e50);
   color: var(--color-fccb06);
 }
@@ -351,14 +349,7 @@ h2 {
   font-weight: 900;
 }
 
-footer {
-  background: #212529;
-  color: #fff;
-  position: fixed;
-  height: 100px;
-  bottom: 0 !important;
-  width: 100%;
-}
+
 
 
 /* productlist End */
@@ -387,12 +378,12 @@ footer {
   height: fit-content;
 }
 
-.cart-btn {
+.cart-btn, .cart-pay {
   background-color: var(--color-fccb06);
   color: var(--color-222e50);
 }
 
-.cart-btn:hover {
+.cart-btn:hover,.cart-pay:hover {
   background-color: var(--color-222e50);
   color: var(--color-fff);
 }
@@ -444,12 +435,16 @@ footer {
 /* Rating End */
 
 /* footer start */
+
 .footer {
-  background: var(--color-222e50);
-  color: #fff;
+  background: var(--color-fff);
   justify-content: center;
   text-align: center;
+  /* color: #fff; */
+  position: fixed;
   height: fit-content;
+  bottom: 0 !important;
+  width: 100%;
 }
 
 /* footer end */
